[tool.poetry]
name = "sock"
version = "0.5.0"
description = "Small script to simplify network communication"
authors = ["hellman"]
license = "MIT"
readme = "README.md"
keywords = ["socket", "telnet", "network"]
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Topic :: System :: Networking',
]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
homepage = "http://github.com/hellman/sock"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
